--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "express": "^4.17.1",
     "http": "0.0.1-security",
     "path": "^0.12.7",
+    "redis": "^3.0.2",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
+    "dotenv": "^8.2.0",
     "nodemon": "^2.0.4",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "util": "^0.12.3"
   }
 }
