feat(db): add mongodb

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ PORT=3000
 REDIS_URL=redis://localhost:6379
 REDIS_HOST=localhost
 REDIS_PORT=6379
+MONGODB_URL=mongodb://localhost:27017/cz_messenger
