--- a/package.json
+++ b/package.json
@@ -1,31 +1,37 @@
 {
-  "name": "chatbox",
-  "version": "1.0.0",
-  "description": "",
-  "main": "dist/app.js",
-  "scripts": {
-    "start": "tsc && nodemon dist/app.js",
-    "dev": "nodemon src/app.ts",
-    "build": "tsc -p .",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@types/node": "^14.11.1",
-    "express": "^4.17.1",
-    "http": "0.0.1-security",
-    "path": "^0.12.7",
-    "redis": "^3.0.2",
-    "socket.io": "^2.3.0",
-    "socket.io-redis": "^5.4.0"
-  },
-  "devDependencies": {
-    "dotenv": "^8.2.0",
-    "nodemon": "^2.0.4",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.3",
-    "util": "^0.12.3"
-  }
+    "name": "chatbox",
+    "version": "1.0.0",
+    "description": "",
+    "main": "dist/app.js",
+    "scripts": {
+        "start": "tsc && nodemon dist/app.js",
+        "dev": "nodemon src/app.ts",
+        "build": "tsc -p .",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "body-parser": "^1.19.0",
+        "express": "^4.17.1",
+        "http": "0.0.1-security",
+        "mongoose": "^5.10.7",
+        "path": "^0.12.7",
+        "redis": "^3.0.2",
+        "socket.io": "^2.3.0",
+        "socket.io-redis": "^5.4.0"
+    },
+    "devDependencies": {
+        "@types/express": "^4.17.8",
+        "@types/node": "^14.11.1",
+        "@types/socket.io": "^2.1.11",
+        "@types/mongoose": "^5.7.36",
+        "dotenv": "^8.2.0",
+        "morgan": "^1.10.0",
+        "nodemon": "^2.0.4",
+        "ts-node": "^9.0.0",
+        "typescript": "^4.0.3",
+        "util": "^0.12.3"
+    }
 }
