feat(id-generator): add cuid generator

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,19 @@ services:
     volumes:
       - 'redis_data:/bitnami/redis/data'
 
+  mongodb:
+    image: docker.io/bitnami/mongodb:4.4-debian-10
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: user
+      MONGO_INITDB_ROOT_PASSWORD: vking34
+    ports:
+      - "27017:27017"
+    volumes:
+      - 'mongodb_data:/bitnami/mongodb'
+
 volumes:
   redis_data:
+    driver: local
+  
+  mongodb_data:
     driver: local
