--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "license": "ISC",
     "dependencies": {
         "body-parser": "^1.19.0",
+        "cuid": "^2.1.8",
         "express": "^4.17.1",
         "http": "0.0.1-security",
         "mongoose": "^5.10.7",
