--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ REDIS_URL=redis://localhost:6379
 REDIS_HOST=localhost
 REDIS_PORT=6379
 MONGODB_URL=mongodb://localhost:27017/cz_messenger
+MESSENGER_NAMESPACE=/messenger
