--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
     },
     "devDependencies": {
         "@types/express": "^4.17.8",
+        "@types/mongoose": "^5.7.36",
         "@types/node": "^14.11.1",
         "@types/socket.io": "^2.1.11",
-        "@types/mongoose": "^5.7.36",
+        "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "morgan": "^1.10.0",
         "nodemon": "^2.0.4",
