--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "axios": "^0.20.0",
         "body-parser": "^1.19.0",
         "cuid": "^2.1.8",
         "express": "^4.17.1",
@@ -24,6 +25,7 @@
         "socket.io-redis": "^5.4.0"
     },
     "devDependencies": {
+        "@types/axios": "^0.14.0",
         "@types/express": "^4.17.8",
         "@types/mongoose": "^5.7.36",
         "@types/node": "^14.11.1",
