--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3000
-REDIS_URL=redis://localhost:6379
+REDIS_ADDRESS=redis://localhost:6379
 REDIS_HOST=localhost
 REDIS_PORT=6379
 MONGODB_URL=mongodb://localhost:27017/cz_messenger
