--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 PORT=3000
-REDIS_ADDRESS=redis://172.26.11.117:6379
+REDIS_ADDRESS=redis://localhost:6379
 MONGODB_URI=mongodb://localhost:27017/cz_messenger
-MESSENGER_NAMESPACE=/messenger
+MESSENGER_NAMESPACE=/v1/sockets/messenger
+SOCKET_PATH=/v1/sockets/socket.io
 SHOP_SERVICE=http://api.chozoi.com/v1/shops
