fix(auction-socket): forward auction result client

--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
-PORT=3000
+PORT=3002
 REDIS_ADDRESS=redis://localhost:6379
 MONGODB_URI=mongodb://localhost:27017/cz_messenger
 MESSENGER_NAMESPACE=/v1/conversations/events
+AUCTION_RESULT_NAMESPACE=/v1/conversations/auction-result-events
 SOCKET_PATH=/v1/conversations/sockets
 SHOP_SERVICE=http://api.chozoi.com/v1/shops
+KAFKA_BOOTSTRAP_SERVERS=172.26.12.211:9092
+SCHEMA_REGISTRY_URL=http://172.26.12.211:8081
