--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
-    "author": "",
+    "author": "vking34",
     "license": "ISC",
     "dependencies": {
         "axios": "^0.20.0",
@@ -18,6 +18,8 @@
         "cuid": "^2.1.8",
         "express": "^4.17.1",
         "http": "0.0.1-security",
+        "kafka-node": "^5.0.0",
+        "kafka-node-avro": "^4.3.0",
         "mongoose": "^5.10.7",
         "path": "^0.12.7",
         "redis": "^3.0.2",
@@ -27,6 +29,7 @@
     "devDependencies": {
         "@types/axios": "^0.14.0",
         "@types/express": "^4.17.8",
+        "@types/kafka-node": "^3.0.0",
         "@types/mongoose": "^5.7.36",
         "@types/node": "^14.11.1",
         "@types/socket.io": "^2.1.11",
