--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ SOCKET_PATH=/v1/conversations/sockets
 SHOP_SERVICE=http://api.chozoi.com/v1/shops
 KAFKA_BOOTSTRAP_SERVERS=172.26.12.211:9092
 SCHEMA_REGISTRY_URL=http://172.26.12.211:8081
+KAFKA_APP_ID=auction-consumer-node-local
+CONSUMER_GROUP_ID=auction-event-consumer-node-local
