--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     expose:
          - 6379
     volumes:
-      - 'redis_data:/bitnami/redis/data'
+      - 'redis_data:/messenger/redis/data'
 
   mongodb:
     image: docker.io/bitnami/mongodb:4.4-debian-10
