feat(auction): add auction set namespace

--- a/.env
+++ b/.env
@@ -9,3 +9,4 @@ KAFKA_BOOTSTRAP_SERVERS=172.26.12.211:9092
 SCHEMA_REGISTRY_URL=http://172.26.12.211:8081
 KAFKA_APP_ID=auction-consumer-node-local
 CONSUMER_GROUP_ID=auction-event-consumer-node-local
+AUCTIONS_RESULT_NAMESPACE=/v1/conversations/auctions-result-events
