--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ SCHEMA_REGISTRY_URL=http://172.26.12.211:8081
 KAFKA_APP_ID=auction-consumer-node-local
 CONSUMER_GROUP_ID=auction-event-consumer-node-local
 AUCTIONS_RESULT_NAMESPACE=/v1/conversations/auctions-result-events
+ACCOUNT_SERVICE=http://api.chozoi.com/v1/users
